# HEOR-Signal

./: .env.example  .replit  LANGGRAPH_IMPLEMENTATION.md  LANGGRAPH_IMPROVEMENTS.md  dev-start.sh  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  run_python_server.py  start_heor_signal.py  start_python_server.py  test_improvements.py  test_raw_preferences.py
attached_assets/: Pasted-Resolved-78-packages-in-1ms-Failed-to-build-heor-signal-file-home-runner-workspace--1753305140383_1753305140384.txt
client/src/: App-minimal.tsx  App-safe.tsx  App-ultra-safe.tsx  App.tsx  index.css  main.tsx
client/src/contexts/: AuthContext.tsx  auth-context.tsx
client/src/hooks/: use-chat.ts  useNewsAgents.ts
client/src/lib/: auth.ts  queryClient.ts  session.ts
client/src/pages/: home.tsx  (+8 more)
server/: alembic.ini  auth.py  config.py  database.py  index.ts  main.py  requirements.txt  routes.ts  run_migration.py  storage.ts
server/controllers/: auth_controller.py  category_chat_controller.py  chat_controller.py  chat_controller_old.py  dashboard_controller.py  news_controller.py  thread_controller.py  user_controller.py
server/middleware/: session_middleware.py
server/migrations/: add_thread_preferences.py  add_user_auth_columns.py  env.py
server/models/: chat.py  thread.py  user.py
server/repositories/: chat_repository.py  user_repository.py
server/services/: auth_service.py  category_chat_agents.py  category_chat_service.py  langgraph_agents.py  message_service.py  openai_service.py  thread_service.py  user_service.py
shared/: schema.ts
(+29 files in other folders)
