[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.12.1",
    "fastapi==0.104.1",
    "openai==1.3.7",
    "psycopg2-binary==2.9.9",
    "pydantic-settings>=2.2.1",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
]
