[project]
name = "heor-signal"
version = "0.1.0"
description = "HEOR Signal Intelligence Platform"
authors = [
    {name = "HEOR Team", email = "team@heor.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.54.3",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "langgraph>=0.2.28",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "feedparser>=6.0.11"
]
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
